--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Jared Goldstein's Portfolio which shows his current work and resume">
+  <meta name="description" content="Jared Goldstein's Portfolio which shows his current work and resume - home page">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="icon" href="favicon.ico"/>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=Ubuntu:wght@700&display=swap"
@@ -14,11 +14,14 @@
 
 <body id="home-page">
   <nav>
+    <!--This hamburger menu is only viewed on mobile devices (If the device is not mobile it will all be disabled)-->
     <label for="hamburger-menu-toggle"></label>
     <input type="checkbox" name="hamburger-menu-toggle" id="" class="toggler">
     <div class="hamburger">
+      <!--Although unamed the bottom div draws the lines for the hamburger menu-->
       <div></div>
     </div>
+    <!--Nav menu (this element is changed depending on the device size)-->
     <div class="menu">
       <div>
         <div id="nav-parent">
@@ -35,7 +38,9 @@
   </nav>
   <main class="showcase">
     <div class="center container showcase-inner">
+      <!--Name and animations-->
       <h1>Ja<span id="red">red</span> <span id="gold">Gold</span>stein</h1>
+      <!--Menu used to display social media links-->
       <menu>
         <li><a href="https://github.com/JaredGold" target="_blank" rel="noopener" rel="noreferrer"><img src="images/SVG Logos/github.svg"
               alt="GitHub Logo" class="logo"></a></li>
@@ -49,7 +54,7 @@
     </div>
   </main>
   </div>
-
+<!--Copyright Footer-->
   <footer>
     <p>Copyright ©Jared Goldstein 2020</p>
   </footer>
