--- a/src/pages/aboutme.html
+++ b/src/pages/aboutme.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Jared Goldstein's Portfolio which shows his current work and resume">
-  <link rel="stylesheet" href="../styles/style.css" >
-  <link rel="icon" href="../favicon.ico"/>
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+  <meta name="description" content="Jared Goldstein's Portfolio which shows his current work and resume - about me page">
+  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="icon" href="../favicon.ico" />
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=Ubuntu:wght@700&display=swap"
+    rel="stylesheet">
 
   <title>Jared Goldstein Portfolio</title>
 </head>
@@ -33,22 +34,55 @@
       </div>
     </div>
   </nav>
+  <!--container used to scroll lock-->
   <main class="center container-y contrast">
+    <!--Larger item to scroll lock-->
     <section class="item">
       <h1>About Me</h1>
       <p>My name is Jared Goldstein and I am a Junior Full Stack Enginner. <br>
         I am currently studying at Coder Academy.</p>
     </section>
     <section class="item">
+      <h1>Who I am?</h1>
+      <p>I am an ex film maker and a lover and collector of games. <br>
+      I am about to be a father of one very beautiful (Gender TBD).<br>
+      I am a real extrovert that loves getting to know people.<br>
+      So if you want to get to know me let's <a href="contact.html" target="_blank">chat!</a></p>
+    </section>
+    <section class="item">
       <h1>What I know</h1>
       <div id="abt-logos">
         <img src="../images/SVG Logos/html5.svg" class="logo" alt="html-5 logo">
-      <img src="../images/SVG Logos/css3.svg" class="logo" alt="css-3 logo">
-      <img src="../images/SVG Logos/sass.svg" class="logo" alt="sass logo">
-      <img src="../images/SVG Logos/ruby.svg" class="logo" alt="ruby logo">
-      <img src="../images/SVG Logos/rubyonrails.svg" class="logo" alt="ruby on rails logo">
-      <img src="../images/SVG Logos/javascript.svg" class="logo" alt="javascript logo">
-    </div>
+        <img src="../images/SVG Logos/css3.svg" class="logo" alt="css-3 logo">
+        <img src="../images/SVG Logos/sass.svg" class="logo" alt="sass logo">
+        <img src="../images/SVG Logos/ruby.svg" class="logo" alt="ruby logo">
+        <img src="../images/SVG Logos/rubyonrails.svg" class="logo" alt="ruby on rails logo">
+        <img src="../images/SVG Logos/javascript.svg" class="logo" alt="javascript logo">
+      </div>
+    </section>
+    <section class="item">
+      <h1>Work History</h1>
+      <br>
+      <table>
+        <tr>
+          <th>Dates</th>
+          <th>Job</th>
+        </tr>
+        <tr>
+          <td><em>2015-2017</em></td>
+          <td><strong> Apple - Store Employee</strong></td>
+        </tr>
+        <tr>
+          <td><em>2016-2017</em></td>
+          <td><strong> iMedia Productions - Editor/ VFX Artist</strong></td>
+        </tr>
+        <tr>
+          <td><em>2018-2020</em></td>
+          <td><strong> CEX - Store Manager</strong></td>
+        </tr>
+        <td><em>2020</em></td>
+        <td><strong> Vodafone - Sales Person</strong></td>
+      </table>
     </section>
     <section class="item bottom-item">
       <h1>Resume</h1>
