--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Jared Goldstein's Portfolio which shows his current work and resume">
+  <meta name="description" content="Jared Goldstein's Portfolio which shows his current work and resume - this page is the contact page">
   <link rel="stylesheet" href="../styles/style.css">
   <link rel="icon" type="image/ico" href="../favicon.ico"/>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
@@ -33,10 +33,12 @@
       </div>
     </div>
   </nav>  
+  <!--Form used for contact me page-->
   <main class="contact-me">
     <form action="mailto:jegoldstein94@gmail.com" method="post" enctype="text/plain">
       <h1>Contact Me</h1>
       <div class="form">
+        <!--Inputs used and designed specifically with animation-->
         <input type="text" name="name" autocomplete="off" required>
         <label for="name" class="label-name">
           <span class="content-name">Name</span>
