--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Jared Goldstein's Portfolio which shows his current work and resume - this page is the contact page">
-  <link rel="stylesheet" href="../styles/style.css">
-  <link rel="icon" type="image/ico" href="../favicon.ico"/>
+  <link rel="stylesheet" href="../styles/style.css" integrity="sha512-e0DvZeBZ/0qtHTdaIcBvLFC0ViN/NMdJT2EbQ6zucccglEL8sethF20Xx7adUEjW8LHUjwwu8PfusPprZGJeHw==%">
+  <link rel="icon" type="image/ico" href="../favicon.ico"integrity="sha512-xalv4zppK1STyEE9U5fRPpryOdhaeJ0bJr0Zmpk9bYDTuT/l4k6TPj2J3vEJwy1oI7saeRZyWLhRWfYDJn1K5g==%"/>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 
   <title>Jared Goldstein Portfolio</title>
